# ls-hw-mqtt-gui

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
mqtt/: mqtt_client.py
mqtt_gui/: __init__.py  main.py  metric_graph.py
mqtt_gui.egg-info/: PKG-INFO  entry_points.txt
