[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-gui"
version = "1.0.0"
description = "MQTT GUI Application"
requires-python = ">=3.8"

[project.scripts]
mqtt-gui = "mqtt_gui.main:main"

[tool.setuptools]
packages = ["mqtt", "mqtt_gui"]
